# feedly-to-linkace

./: .dockerignore  .env.original  CHANGELOG.md  Dockerfile  Dockerfile.production  LICENSE  Pipfile  README.md  docker-compose.yml  setup.cfg
.github/workflows/: build-and-push.yml  build.yml
feedly_to_linkace/: __init__.py  main.py
tests/: __init__.py
