[metadata]
name = feedly_to_linkace
version = attr: feedly_to_linkace.__version__
url = https://github.com/u6k/feedly-to-linkace
author = u6k
author_email = u6k.apps@gmail.com
description = "Feedly記事をLinkAceブックマークに自動登録する"
long_description = file: README.md
license = MIT License

[options]
packages = find:

[tool.isort]
profile = "black"
line_length = 1000

[tool.autopep8]
max_line_length = 1000
