[metadata]
name = feedly_to_linkace
version = attr: feedly_to_linkace.__version__
url = https://github.com/u6k/feedly-to-linkace
author = u6k
author_email = u6k.apps@gmail.com
description = "Feedly記事をLinkAceブックマークに自動登録する"
long_description = file: README.md
license = MIT License

[options]
packages = find:

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 1000

[flake8]
ignore = E501
